# OS-TA-Final

./: .gitignore  CMakeLists.txt  GradeClient  Makefile  assitants.txt  students.txt
include/: .commands.h.swp  .comms.h.swp  backend.h  commands.h  common.h  comms.h  db.h  pool.h  queue.h  shell.h  status.h  tworker.h
src/: .comms.c.swp  .shell.c.swp  backend.c  comms.c  db.c  grade_client.c  grade_server.c  pool.c  queue.c  shell.c  tworker.c
